# syskits

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  README_EN.md  build.rs  build.sh  run_test_or_coverage.sh
.devcontainer/: devcontainer.json  dockerfile.ctyunos2206  dockerfile.ctyunos2507
.mr-queue/: state.json
crates/commands/base64/: Cargo.toml
crates/commands/base64/locales/zh-CN/: zh-CN.yml
crates/commands/base64/src/: base64.rs
crates/commands/basename/: Cargo.toml
crates/commands/basename/src/: basename.rs  main.rs
crates/commands/basenc/: Cargo.toml
crates/commands/basenc/locales/en-US/: en-US.yml
crates/commands/basenc/src/: basenc.rs  main.rs
crates/commands/cat/: Cargo.toml
crates/commands/cat/locales/en-US/: en-US.yml
crates/commands/cat/src/: cat.rs  main.rs  splice.rs
crates/commands/chgrp/: Cargo.toml
crates/commands/chgrp/src/: chgrp.rs  main.rs
crates/commands/chmod/: Cargo.toml
crates/commands/chmod/src/: chmod.rs
crates/commands/csplit/: Cargo.toml
crates/commands/csplit/src/: csplit.rs  csplit_error.rs  patterns.rs  split_name.rs
crates/commands/dd/: Cargo.toml
crates/commands/dd/locales/: zh-CN.yml
crates/commands/dd/src/: dd.rs  parseargs.rs  progress.rs
crates/commands/dir/: Cargo.toml
crates/commands/dir/locales/: en-US.yml  zh-CN.yml
crates/commands/dir/src/: dir.rs  main.rs
crates/commands/expr/: Cargo.toml
crates/commands/expr/src/: expr.rs  syntax_tree.rs
crates/commands/false/: Cargo.toml
crates/commands/false/locales/: en-US.yml  zh-CN.yml
crates/commands/false/src/: false.rs
crates/commands/fold/: Cargo.toml
crates/commands/fold/locales/: en-US.yml  zh-CN.yml
crates/commands/fold/locales/en-US/: en-US.yml
crates/commands/fold/src/: fold.rs
crates/commands/hashsum/: Cargo.toml
crates/commands/hashsum/locales/: en-US.yml  zh-CN.yml
crates/commands/hashsum/src/: hashsum.rs
crates/commands/hostid/: Cargo.toml
crates/commands/hostid/locales/: zh-CN.yml
crates/commands/hostid/locales/en-US/: en-US.yml
crates/commands/hostid/src/: hostid.rs  main.rs
crates/commands/id/: Cargo.toml
crates/commands/id/locales/: zh-CN.yml
crates/commands/id/locales/en-US/: en-US.yml
crates/commands/id/src/: id.rs  main.rs
crates/commands/install/: Cargo.toml
crates/commands/install/locales/: en-US.yml  zh-CN.yml
crates/commands/install/locales/en-US/: en-US.yml
crates/commands/install/src/: install.rs
crates/commands/ln/: Cargo.toml
crates/commands/ln/locales/: en-US.yml
crates/commands/ln/src/: ln.rs
crates/commands/logname/: Cargo.toml
crates/commands/logname/src/: logname.rs
crates/commands/ls/: Cargo.toml
crates/commands/ls/locales/: en-US.yml  zh-CN.yml
crates/commands/ls/src/: dired.rs  ls.rs  main.rs
crates/commands/mkfifo/: Cargo.toml
crates/commands/mkfifo/locales/: en-US.yml  zh-CN.yml
crates/commands/mkfifo/locales/en-US/: en-US.yml
crates/commands/mkfifo/src/: main.rs  mkfifo.rs
crates/commands/mknod/: Cargo.toml
crates/commands/mknod/locales/: en-US.yml  zh-CN.yml
crates/commands/mknod/src/: mknod.rs
crates/commands/mktemp/: Cargo.toml
crates/commands/mktemp/src/: main.rs  mktemp.rs
crates/commands/more/: Cargo.toml
crates/commands/more/locales/: en-US.yml  zh-CN.yml
crates/commands/more/src/: command.rs  lib.rs  main.rs  more.rs  pager.rs  render.rs  tty.rs
crates/commands/mv/: Cargo.toml
crates/commands/mv/locales/: en-US.yml  zh-CN.yml
crates/commands/mv/src/: error.rs  mv.rs
crates/tool_derive/: Cargo.toml
crates/tool_derive/src/: lib.rs
doc/: PROJECT_ARCHITECTURE.md  PROJECT_RULES.md
spec/: syskits.spec  update_spec_for_dev.sh
src/compat_test/: Cargo.toml  README.md
src/compat_test/conf/: default.toml
src/compat_test/src/: config.rs  executor.rs  lib.rs  reporter.rs  sandbox.rs  test_case.rs
src/compat_test/test_cases/: arch.json  base64.json  cat.json  chmod.json  cut.json  dircolors.json  dirname.json  echo.json  factor.json  false.json  fold.json  groups.json  hostid.json  hostname.json  id.json  link.json  ln.json  logname.json  mkdir.json  mkfifo.json  mv.json  nl.json  nproc.json  null_test.json  paste.json  pathchk.json  printf.json  readlink.json  realpath.json  rmdir.json  shred.json  timeout.json  true.json  truncate.json  uniq.json  unlink.json  users.json  who.json  whoami.json  yes.json
src/ctcore/: Cargo.toml
src/ctcore/src/lib/: ct_features.rs  ct_macros.rs  ct_mods.rs  ct_parser.rs  features.rs  lib.rs  macros.rs  parser.rs  tool.rs
src/ctcore/src/lib/ct_features/: ct_backup_control.rs  ct_colors.rs  ct_encoding.rs  ct_entries.rs  ct_fs.rs  ct_fsext.rs  ct_fsxattr.rs  ct_lines.rs  ct_mode.rs  ct_perms.rs  ct_pipes.rs  ct_process.rs  ct_quoting_style.rs  ct_ranges.rs  ct_ringbuffer.rs  ct_signals.rs  ct_sum.rs  ct_update_control.rs  ct_utmpx.rs  ct_version_cmp.rs  ct_wide.rs
src/ctcore/src/lib/ct_features/ct_format/: argument.rs  escape.rs  mod.rs  num_format.rs  num_parser.rs  spec.rs
src/ctcore/src/lib/ct_mods/: ct_display.rs  ct_error.rs  ct_io.rs  ct_line_ending.rs  ct_os.rs  ct_panic.rs  ct_posix.rs
src/ctcore/src/lib/ct_parser/: ct_parse_glob.rs  ct_parse_size.rs  ct_parse_time.rs  ct_shortcut_value_parser.rs
src/ctcore/src/lib/features/: backup_control.rs  colors.rs  encoding.rs  entries.rs  fs.rs  fsext.rs  fsxattr.rs  lines.rs  mode.rs  perms.rs  pipes.rs  process.rs  quoting_style.rs  ranges.rs  ringbuffer.rs  signals.rs  sum.rs  update_control.rs  utmpx.rs  version_cmp.rs  wide.rs
src/ctcore/src/lib/features/format/: argument.rs  escape.rs  mod.rs  num_format.rs  num_parser.rs  spec.rs
src/ctcore/src/lib/mods/: ct_display.rs  ct_error.rs  ct_io.rs  ct_line_ending.rs  ct_os.rs  ct_panic.rs  ct_posix.rs
src/ctcore/src/lib/parser/: ct_parse_glob.rs  ct_parse_size.rs  ct_parse_time.rs  ct_shortcut_value_parser.rs
src/ctcore_procs/: Cargo.toml
src/ctcore_procs/src/: lib.rs
src/cthelp_parser/: Cargo.toml
src/cthelp_parser/src/: lib.rs
util/: README.md  build-gnu.sh  fetch-gnu.sh  gen_html.py  gen_test_result.py  run-gnu-test.sh
(+976 files in other folders)
