[workspace]
resolver = "2" # Using version 2 resolver is recommended
members = [
    "bin/syskits",
    "bin/compat_test",
    "crates/ctcore",
    "crates/tool_derive",
    "crates/commands/*"
]
default-members = ["bin/syskits"] # 设置 syskits 应用为默认构建目标

[workspace.package] # workspace 信息，共享的package配置项
version = "3.1.4"
authors = ["CTyunOS linux developers"]
license = "Mulan PSL v2.0"
homepage = "https://www.ctyun.cn/developer"
keywords = ["syskits", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
bigdecimal = "0.4"
binary-heap-plus = "0.5.0"
bstr = "1.9.1"
bytecount = "0.6.7"
byteorder = "1.5.0"
chrono = { version = "^0.4.35", default-features = false, features = [
  "std",
  "alloc",
  "clock",
] }
clap = { version = "4.5.10", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.5.10"
clap_mangen = "0.2.20"
compare = "0.1.0"
coz = { version = "0.1.3" }
crossterm = ">=0.27.0"
ctrlc = { version = "3.4", features = ["termination"] }
exacl = "0.12.0"
file_diff = "1.0.0"
filetime = "0.2"
fnv = "1.0.7"
fs_extra = "1.3.0"
fts-sys = "0.2"
fundu = "2.0.0"
gcd = "2.3"
glob = "0.3.1"
half = "2.4"
hostname = "0.3"
indicatif = "0.17"
itertools = "0.12.1"
libc = "0.2.153"
num-modular = "0.6.1"
num-prime = "0.4.3"
lscolors = { version = "0.16.0", default-features = false, features = [
  "gnu_legacy",
] }
memchr = "2"
memmap2 = "0.9"
nix = { version = "0.28", default-features = false }
nom = "7.1.3"
notify = { version = "=6.0.1", features = ["macos_kqueue"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
number_prefix = "0.4"
once_cell = "1.19.0"
onig = { version = "~6.4", default-features = false }
parse_datetime = "0.5.0"
phf = "0.11.2"
phf_codegen = "0.11.2" # This is a workspace-level build dependency if used by multiple crates' build scripts
platform-info = "2.0.2"
quick-error = "2.0.1"
rand = { version = "0.8", features = ["small_rng"] }
rand_core = "0.6"
rayon = "1.8"
redox_syscall = "0.5"
regex = "1.10.4"
rstest = "0.18.2"
rust-ini = "0.19.0"
same-file = "1.0.6"
self_cell = "1.0.3"
selinux = "0.4"
signal-hook = "0.3.17"
smallvec = { version = "1.13", features = ["union"] }
tempfile = "3.10.1"
uutils_term_grid = "0.3"
terminal_size = "0.3.0"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
thiserror = "1.0"
time = { version = "0.3" }
unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"
utf-8 = "0.7.6"
walkdir = "2.5"
winapi-util = "0.1.6"
windows-sys = { version = "0.48.0", default-features = false }
xattr = "1.3.1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
conv = "0.3"

hex = "0.4.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2b_simd = "1.0.2"
blake3 = "1.5.1"
sm3 = "0.4.2"
digest = "0.10.7"
rust-i18n = "2"
sys-locale = "0.2"
dns-lookup = "2.0"
if-addrs = "0.13.4"
serial_test = "0.5"

# 项目内部共享库 - path 属性已根据新结构更新
ctcore = { package = "ctcore", path = "crates/ctcore" }
compat_test = { path = "bin/compat_test" }
tool_derive = { path = "crates/tool_derive" }
anyhow = "1.0"

[profile.release]
lto = true

[profile.release-fast]
inherits = "release"
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true


