[package]
name = "ctcore_procs"
version.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true

description = "ct-utils ~ 'ctcore' proc-macros"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/src/ctcore_procs"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
cthelp_parser = { path = "../cthelp_parser"}
