[package]
name = "ct_basename"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "basename ~ (ctutils) display PATHNAME with leading directory components removed"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/basename"

[lib]
path = "src/basename.rs"

[dependencies]
clap = { workspace = true }
ctcore = { workspace = true }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }

[[bin]]
name = "basename"
path = "src/main.rs"
