[package]
name = "ct_basenc"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "basenc ~ (ctutils) decode/encode input"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/basenc"

[lib]
path = "src/basenc.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
ctcore = { workspace = true, features = ["encoding"] }
ct_base32 = { path = "../base32" }

[[bin]]
name = "basenc"
path = "src/main.rs"
