[package]
name = "ct_chgrp"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "chgrp ~ (ctutils) change the group ownership of FILE"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/chgrp"

[lib]
path = "src/chgrp.rs"

[dependencies]
clap = { workspace = true }
ctcore = { workspace = true, features = ["entries", "fs", "perms"] }
rust-i18n = { workspace = true }
[[bin]]
name = "chgrp"
path = "src/main.rs"
