[package]
name = "ct_chmod"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "chmod ~ (ctutils) change mode of FILE"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/chmod"

[lib]
path = "src/chmod.rs"

[dependencies]
clap = { workspace = true }
ctcore = { workspace = true, features = ["fs", "mode"] }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "chmod"
path = "src/main.rs"
