[package]
name = "ct_dir"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "shortcut to ls -C -b"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/ls"
[lib]
path = "src/dir.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true, features = ["env"] }
ctcore = { workspace = true, features = ["entries", "fs", "quoting-style"] }
ct_ls = { path = "../ls" }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "dir"
path = "src/main.rs"

# [features]
# feat_selinux = ["selinux"]
# feat_acl = ["exacl"]