[package]
name = "ct_expr"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "expr ~ (ctutils) display the value of EXPRESSION"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/expr"

[lib]
path = "src/expr.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
onig = { workspace = true }
onig_sys = { workspace = true }
ctcore = { workspace = true }

[[bin]]
name = "expr"
path = "src/main.rs"
