[package]
name = "ct_false"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "false ~ (ctutils) do nothing and fail"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/false"

[lib]
path = "src/false.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
ctcore = { workspace = true }

[[bin]]
name = "false"
path = "src/main.rs"
