[package]
name = "ct_hostid"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/hostid"

[lib]
path = "src/hostid.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
ctcore = { workspace = true }

[[bin]]
name = "hostid"
path = "src/main.rs"
